name:                roguelike
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/roguelike#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable roguelike
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Direction,
                       Dungeon,
                       Player,
                       Game,
                       Rendering,
                       Action
  build-depends:       base >= 4.7 && < 5,
                       vty,
                       matrix,
                       unordered-containers,
                       microlens-th,
                       microlens,
                       random
